# json-remapper

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.cfg
json_remapper/: __init__.py  exceptions.py  schema.py  utils.py
json_remapper/core/: data.py  mapper.py  node.py
tests/: test_mapper.py  test_schema.py
