[metadata]
name = json-remapper
version = 0.1.0
author = Nic Ullman
author_email = lordtardus@gmail.com
description = A flexible JSON schema-based remapping tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
project_urls =
    Bug Tracker = https://github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independet

[Options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    jsonschema>=4.0.0

[options.packages.find]
where = .